--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,15 +43,15 @@ stages:
     - task: PublishBuildArtifacts@1
       inputs:
         PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-        ArtifactName: 'drop'
-
+        ArtifactName: 'drop' 
 - stage: Deploy
   jobs:
   - job: Deploy
     steps:
-    - task: AzureWebApp@1
+    - task: AzureRmWebAppDeployment@4
       inputs:
+        ConnectionType: 'AzureRM'
         azureSubscription: 'AzureAppServiceConnectionb5'
         appType: 'webApp'
-        appName: 'rafiul'
-        package: '$(Pipeline.Workspace)/drop/**/*.zip'
+        WebAppName: 'rafiul'
+        packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
